--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,17 +3,26 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🚀</text></svg>">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
 
+        {# feuille de style #}
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/conver.css') }}">
+        {% endblock %}
+        
+        {# fichier javascript #}
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+        <script src="{{ asset('js/script.js') }}"></script>   
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% include "_partiales/_nav.html.twig"%}
+        {% include "_partiales/_converED.html.twig"%}
+        {% block body %}
+        
+        {% endblock %}
     </body>
 </html>
